Paint carets at pixel-snapped positions.

BUG=640463

Review-Url: https://codereview.chromium.org/2310173002
Cr-Commit-Position: refs/heads/master@{#416741}

Former-commit-id: 15cd2c4febc289ac3291ad1613841f6efaa610a6